# posture-correction-firebase

./: .gitignore  CONEXOES_MPU6050.md  README.md  sdkconfig  sdkconfig.old
components/esp_firebase/: app.cpp  rtdb.cpp
main/: CMakeLists.txt  firebase_config.h  mpu_wrapper.cpp  mpu_wrapper.h  wifi_config.h  wpa2_enterprise_main.cpp
